<resources>
    <string name="app_name">CalCount</string>
    <string name="init_text">Total Calories: 0</string>
    <string name="plus_discript">plus button</string>
    <string name="minus_discript">minus button</string>
    <string name="food_name">food name</string>
    <string name="number_of_calories">number of calories</string>
    <string name="remove_item">remove item</string>
    <string name="food_item_name">name: %1$s</string>
    <string name="cal_item_amt">calories: %1$s</string>
    <string name="display_float_text">Total Calories: %1$f</string>
    <string name="display_int_text">Total Calories: %1$d</string>
    <string name="add">Add</string>
    <string name="reset">Reset</string>
    <string name="number_input">number input</string>
</resources>